14020
This code will fail in the interpreter (but not in the compiler)
```scala
  def pin() = {
    class Z
    class X extends Z
    new X
  }
  pin
```
Error message is:
```scala
scala> pin
<console>:5: error: type mismatch;
 found   : X(in object $$iw) where type X(in object $$iw) <: Z with ScalaObject
 required: X(in value res0) forSome { type X(in value res0) <: Z with ScalaObject; type Z <: java.lang.Object with ScalaObject }
       val res0 = 
           ^
```
